compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__peel_ref_in_put_stmt.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : int put a : 0 : 0 : 0"

---
"a"@(FileId(1), 4..5) [Declared]: ref_mut int
"<root>"@(dummy) [Declared]: <error>

