compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__report_aliased_type_in_assign.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "type a0 : real\ntype a1 : int\nvar k : a0\nvar i : a1\ni := k"

---
"a0"@(FileId(1), 5..7) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of real
"a1"@(FileId(1), 20..22) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"k"@(FileId(1), 33..34) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of real
"i"@(FileId(1), 44..45) [Declared]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 53..55: mismatched types
| note in file FileId(1) for 56..57: this is of type `a0 (alias of real)`
| note in file FileId(1) for 51..52: this is of type `a1 (alias of int)`
| info: `real` is not assignable into `int`
