compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__report_aliased_type_in_case.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "type a0 : char\ntype a1 : char(6)\nvar ca0 : a0\nconst cna1 : a1 := 'aaaaaa'\n\ncase ca0 of\nlabel cna1:\nend case\n"

---
"a0"@(FileId(1), 5..7) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"a1"@(FileId(1), 20..22) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"ca0"@(FileId(1), 37..40) [Declared]: ref_mut alias[DefId(LibraryId(0), LocalDefId(0))] of char
"cna1"@(FileId(1), 52..56) [Declared]: ref alias[DefId(LibraryId(0), LocalDefId(1))] of char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 93..97: mismatched types
| note in file FileId(1) for 93..97: this is of type `char(6)`
| note in file FileId(1) for 80..83: discriminant is of type `char`
| info: `char(6)` is not a `char`
| info: selector type must match discriminant type
