compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_constvar.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var _ : 1 .. 0"

---
"_"@(FileId(1), 4..5) [Declared]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1))))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 8..14: element range is too small
| note in file FileId(1) for 8..14: computed range size is 0
| error in file FileId(1) for 8..14: zero sized ranges cannot be used in `var` declarations
