compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_pointer_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : ^1..0"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of pointer to range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 10..14: element range is too small
| note in file FileId(1) for 10..14: computed range size is 0
| error in file FileId(1) for 10..14: zero sized ranges cannot be used in pointer types
