compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_set_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : set of 1..0"
---
"_"@(FileId(1), 5..6) [Type]: set[DefId(LibraryId(0), LocalDefId(1))] of range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"_"@(FileId(1), 9..20) [Set]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 16..20: element range is too small
| note in file FileId(1) for 16..20: computed range size is 0
| error in file FileId(1) for 16..20: zero sized ranges cannot be used in `set` element types
