compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_subprogram_param.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "proc p(_:1..0) end p"

---
"p"@(FileId(1), 5..6) [Declared]: procedure ( pass(value) range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No)), ) -> void
"<unnamed>"@(dummy) [Declared]: <error>
"_"@(FileId(1), 7..8) [Declared]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 9..13: element range is too small
| note in file FileId(1) for 9..13: computed range size is 0
| error in file FileId(1) for 9..13: zero sized ranges cannot be used in `procedure` declarations
